syntax = "proto3";

package proto;

option go_package = "./proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message OrderItem {
  string manga_id = 1;
  int32 quantity = 2;
  float unit_price = 3;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  string order_id = 1;
  float total_amount = 2;
}